--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -1524,29 +1524,95 @@ http://applets.etsmtl.ca</string>
         <scene sceneID="5Jw-jp-LRi">
             <objects>
                 <tableViewController id="lz9-DU-0Fb" customClass="ETSNewsViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="5Ap-aJ-gjq">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="108" sectionHeaderHeight="10" sectionFooterHeight="10" id="5Ap-aJ-gjq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsIdentifier" textLabel="534-ap-SzJ" rowHeight="154" style="IBUITableViewCellStyleDefault" id="vYS-zD-tKa">
-                                <rect key="frame" x="0.0" y="119" width="320" height="154"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsIdentifier" rowHeight="108" id="vYS-zD-tKa" customClass="ETSNewsCell">
+                                <rect key="frame" x="0.0" y="119" width="320" height="108"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vYS-zD-tKa" id="sEJ-7o-MYa">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="153"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="107"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="270" id="534-ap-SzJ">
-                                            <rect key="frame" x="15" y="0.0" width="270" height="153"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyP-rs-sPQ">
+                                            <rect key="frame" x="9" y="1" width="278" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="169" translatesAutoresizingMaskIntoConstraints="NO" id="P89-pf-gj2">
+                                            <rect key="frame" x="118" y="20" width="169" height="77"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j4a-3s-XOr">
+                                            <rect key="frame" x="9" y="20" width="101" height="77"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="101" id="Jid-1G-7uD"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="j4a-3s-XOr" firstAttribute="top" secondItem="P89-pf-gj2" secondAttribute="top" id="Cs6-nE-YMu"/>
+                                        <constraint firstAttribute="trailing" secondItem="P89-pf-gj2" secondAttribute="trailing" id="DG0-cy-s6G"/>
+                                        <constraint firstItem="j4a-3s-XOr" firstAttribute="top" secondItem="sEJ-7o-MYa" secondAttribute="top" constant="20" symbolic="YES" id="GvB-xl-rjb"/>
+                                        <constraint firstItem="P89-pf-gj2" firstAttribute="trailing" secondItem="DyP-rs-sPQ" secondAttribute="trailing" id="J0c-j3-zQ8"/>
+                                        <constraint firstItem="P89-pf-gj2" firstAttribute="leading" secondItem="j4a-3s-XOr" secondAttribute="trailing" constant="8" symbolic="YES" id="JJ3-Jj-auU"/>
+                                        <constraint firstItem="DyP-rs-sPQ" firstAttribute="leading" secondItem="sEJ-7o-MYa" secondAttribute="leading" constant="9" id="LXA-es-0eh"/>
+                                        <constraint firstAttribute="bottom" secondItem="DyP-rs-sPQ" secondAttribute="bottom" constant="85" id="M4L-RN-Wax"/>
+                                        <constraint firstItem="DyP-rs-sPQ" firstAttribute="leading" secondItem="j4a-3s-XOr" secondAttribute="leading" id="NZ3-Rp-3bZ"/>
+                                        <constraint firstItem="DyP-rs-sPQ" firstAttribute="top" secondItem="sEJ-7o-MYa" secondAttribute="top" constant="1" id="Ykw-6X-7dM"/>
+                                        <constraint firstAttribute="bottom" secondItem="j4a-3s-XOr" secondAttribute="bottom" constant="10" id="meg-Zd-WJm"/>
+                                        <constraint firstItem="P89-pf-gj2" firstAttribute="bottom" secondItem="j4a-3s-XOr" secondAttribute="bottom" id="xhX-bf-8cr"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="authorLabel" destination="DyP-rs-sPQ" id="T4M-c1-LxO"/>
+                                    <outlet property="contentLabel" destination="P89-pf-gj2" id="Hdj-LS-E73"/>
+                                    <outlet property="thumbnailView" destination="j4a-3s-XOr" id="F8Q-fN-7fp"/>
                                     <segue destination="Zcx-WD-r1i" kind="push" identifier="NewsSegue" id="a6C-Vc-8jI"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsEmptyIdentifier" rowHeight="108" id="vFW-3H-pyb" customClass="ETSNewsEmptyCell">
+                                <rect key="frame" x="0.0" y="227" width="320" height="108"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vFW-3H-pyb" id="8hU-vh-Tzz">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="107"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8f-ML-adh">
+                                            <rect key="frame" x="9" y="1" width="278" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="278" translatesAutoresizingMaskIntoConstraints="NO" id="Uiw-p2-5aC">
+                                            <rect key="frame" x="9" y="20" width="278" height="77"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Uiw-p2-5aC" firstAttribute="top" secondItem="8hU-vh-Tzz" secondAttribute="top" constant="20" symbolic="YES" id="3qs-Wj-bpk"/>
+                                        <constraint firstAttribute="bottom" secondItem="V8f-ML-adh" secondAttribute="bottom" constant="85" id="QN4-CN-gTo"/>
+                                        <constraint firstItem="V8f-ML-adh" firstAttribute="leading" secondItem="8hU-vh-Tzz" secondAttribute="leading" constant="9" id="cKn-3T-jEr"/>
+                                        <constraint firstItem="V8f-ML-adh" firstAttribute="top" secondItem="8hU-vh-Tzz" secondAttribute="top" constant="1" id="eJh-uv-DOm"/>
+                                        <constraint firstAttribute="bottom" secondItem="Uiw-p2-5aC" secondAttribute="bottom" constant="10" id="f6V-du-56E"/>
+                                        <constraint firstAttribute="trailing" secondItem="Uiw-p2-5aC" secondAttribute="trailing" id="uoU-xg-4eg"/>
+                                        <constraint firstItem="Uiw-p2-5aC" firstAttribute="leading" secondItem="V8f-ML-adh" secondAttribute="leading" id="yUz-e3-3Oz"/>
+                                        <constraint firstItem="V8f-ML-adh" firstAttribute="trailing" secondItem="Uiw-p2-5aC" secondAttribute="trailing" id="zMj-dj-hUr"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="authorLabel" destination="V8f-ML-adh" id="MXQ-A9-pgj"/>
+                                    <outlet property="contentLabel" destination="Uiw-p2-5aC" id="wf1-F7-YTP"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
