--- a/ETSMobile/Base.lproj/Main_iPad.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPad.storyboard
@@ -1157,7 +1157,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="uoZ-7p-ZMR" kind="relationship" relationship="rootViewController" id="aHj-9y-2BY"/>
+                        <segue destination="6dD-44-xaw" kind="relationship" relationship="rootViewController" id="RAA-Za-etH"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVF-6y-wUZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1165,38 +1165,40 @@
             <point key="canvasLocation" x="1566" y="11524"/>
         </scene>
         <!--Sponsors View Controller - Partenaires-->
-        <scene sceneID="L7F-yo-uym">
+        <scene sceneID="fXK-pg-dAB">
             <objects>
-                <viewController title="Partenaires" id="uoZ-7p-ZMR" customClass="ETSSponsorsViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6cE-A3-ej9"/>
-                        <viewControllerLayoutGuide type="bottom" id="ipO-ZU-JPe"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="EHb-Ep-BY7">
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" title="Partenaires" id="6dD-44-xaw" customClass="ETSSponsorsViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="RCL-bH-c2i">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="À venir…" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksf-pY-eqz">
-                                <rect key="frame" x="349" y="502" width="70" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ksf-pY-eqz" secondAttribute="centerY" id="8RT-q0-00a"/>
-                            <constraint firstAttribute="centerX" secondItem="ksf-pY-eqz" secondAttribute="centerX" id="SUP-1K-LZ2"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="9oa-2J-Esf"/>
-                    <navigationItem key="navigationItem" title="Partenaires" id="fdZ-aX-aMx"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fet-zs-TSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1Rv-D4-Nqm">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SponsorIdentifier" id="vZY-eL-6cn">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="6dD-44-xaw" id="TlP-w0-etd"/>
+                            <outlet property="delegate" destination="6dD-44-xaw" id="WjL-fL-9uA"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Partenaires" id="obS-3h-c5y"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tgl-aC-PGb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2728" y="11551"/>
+            <point key="canvasLocation" x="2715" y="11524"/>
         </scene>
         <!--Navigation Controller - À propos-->
         <scene sceneID="BTw-e5-D3H">
@@ -2138,7 +2140,7 @@ http://applets.etsmtl.ca</string>
         </scene>
     </scenes>
     <resources>
-        <image name="AuthenticationBackground" width="792" height="1470"/>
+        <image name="AuthenticationBackground" width="396" height="735"/>
         <image name="apartment" width="45" height="45"/>
         <image name="bed" width="45" height="45"/>
         <image name="home" width="22" height="22"/>
@@ -2150,9 +2152,9 @@ http://applets.etsmtl.ca</string>
         <image name="ico_news" width="24" height="24"/>
         <image name="ico_notes" width="24" height="24"/>
         <image name="ico_partners" width="24" height="24"/>
-        <image name="ico_profil" width="24" height="23"/>
+        <image name="ico_profil" width="24" height="24"/>
         <image name="ico_radio" width="24" height="24"/>
-        <image name="ico_schedule_24x24" width="23" height="23"/>
+        <image name="ico_schedule_24x24" width="24" height="24"/>
         <image name="ico_security" width="24" height="24"/>
     </resources>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
