--- a/ETSMobile/Base.lproj/Main_iPhone.storyboard
+++ b/ETSMobile/Base.lproj/Main_iPhone.storyboard
@@ -1017,37 +1017,49 @@
             <point key="canvasLocation" x="-868" y="-2897"/>
         </scene>
         <!--Sponsors View Controller - Partenaires-->
-        <scene sceneID="L7F-yo-uym">
+        <scene sceneID="9i9-2u-Xd0">
             <objects>
-                <viewController title="Partenaires" id="uoZ-7p-ZMR" customClass="ETSSponsorsViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6cE-A3-ej9"/>
-                        <viewControllerLayoutGuide type="bottom" id="ipO-ZU-JPe"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="EHb-Ep-BY7">
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" title="Partenaires" id="Ebg-4B-1Og" customClass="ETSSponsorsViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="oXD-JB-OCg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="À venir…" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksf-pY-eqz">
-                                <rect key="frame" x="125" y="274" width="70" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerY" secondItem="ksf-pY-eqz" secondAttribute="centerY" id="8RT-q0-00a"/>
-                            <constraint firstAttribute="centerX" secondItem="ksf-pY-eqz" secondAttribute="centerX" id="SUP-1K-LZ2"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Partenaires" id="fdZ-aX-aMx"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fet-zs-TSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tax-tz-2pd">
+                            <size key="itemSize" width="187" height="71"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SponsorIdentifier" id="JBy-DE-oUC">
+                                <rect key="frame" x="67" y="64" width="187" height="71"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="187" height="71"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SzI-Ic-LWX">
+                                            <rect key="frame" x="4" y="14" width="0.0" height="0.0"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Ebg-4B-1Og" id="c6L-Ms-Xad"/>
+                            <outlet property="delegate" destination="Ebg-4B-1Og" id="eo0-dP-f0U"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Partenaires" id="Deh-No-qFe"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nzO-cd-zby" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1327" y="-2273"/>
+            <point key="canvasLocation" x="1256" y="-2273"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Bmc-n1-9Hi">
@@ -1672,20 +1684,20 @@ http://applets.etsmtl.ca</string>
             </objects>
             <point key="canvasLocation" x="1327" y="-1435"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation Controller - Partenaires-->
         <scene sceneID="pZG-rN-EJ1">
             <objects>
-                <navigationController storyboardIdentifier="SponsorsViewController" definesPresentationContext="YES" id="1UK-Fi-Rsd" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="SponsorsViewController" title="Partenaires" definesPresentationContext="YES" id="1UK-Fi-Rsd" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xKt-ea-qtv">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="uoZ-7p-ZMR" kind="relationship" relationship="rootViewController" id="nZb-Ii-Chp"/>
+                        <segue destination="Ebg-4B-1Og" kind="relationship" relationship="rootViewController" id="Djg-wu-TQA"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J7j-qj-mcB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="806" y="-2273"/>
+            <point key="canvasLocation" x="823" y="-2273"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9h0-ZH-LUI">
